# autocoder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONFIGURATION.md  CUSTOM_UPDATES.md  DEVELOPMENT.md  DEVPROCESS.md  Dockerfile  FORK_CHANGELOG.md  FORK_README.md  FUTURE_ENHANCEMENTS.md  Makefile  OPENCODE.md  PORT_ALLOCATION_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  RUNBOOK.md  VERSION.json  __init__.py  agent.py  agent_manager.py  agent_types.py  app_spec_parser.py  auth.py  auto_documentation.py  autoforge_paths.py  autonomous_agent_demo.py  client.py  deploy.bat  deploy.py  deploy.sh  deploy_agent.py  design_tokens.py  detach.py  docker-compose.dev.yml  (+52 more)
.claude/commands/: create-spec.md  (+2 more)
.github/: copilot-instructions.md
analyzers/: __init__.py  base_analyzer.py  feature_extractor.py  node_analyzer.py  python_analyzer.py  react_analyzer.py  stack_detector.py  vue_analyzer.py
api/: __init__.py  agent_types.py  config.py  connection.py  database.py  dependency_resolver.py  feature_repository.py  logging_config.py  migration.py  migrations.py  models.py
dev_archive/: README.md  inspect_knowledge.py  test_knowledge_base.py  verify_knowledge_base.py
docs/: COMMIT_TRACKER.md  CRITICAL_FIXES.md  ENHANCEMENT_PLAN.md  EXTERNAL_REFERENCE_PATTERNS.md  KNOWLEDGE_BASE.md  KNOWLEDGE_BASE_INTEGRATION.md  KNOWLEDGE_BASE_SUMMARY.md  LOCAL_DEV_TEMPLATE.md  MCP_ARCHITECTURE.md  PARALLEL_MODE_UI.md  PORT_ALLOCATION_IMPLEMENTATION_REPORT.md  PROMPT_FOR_OTHER_AI.md  README.md  RELIABILITY_PIPELINE.md  SYSTEM_COMPLETE.md  TDD_WORKFLOW_WITH_MCP.md  TEST_DETECTION_IMPROVEMENTS.md  chat-to-features-spec.md  multi_model_generate.md  multi_model_review.md  subagents.md
examples/: OPTIMIZE_CONFIG.md  org_config.yaml  project_allowed_commands.yaml
integrations/: __init__.py
mcp_server/: agent_mcp.py  feature_mcp.py
research/: COMPLETE-IMPLEMENTATION.md  FINAL-SUMMARY.md  INTEGRATION-COMPLETE.md  PARALLEL-IMPLEMENTATION-GUIDE.md  PROGRESS-REPORT.md  UI-INTEGRATION-GUIDE.md  repository-analysis-report.md  subagent-parallel-execution.md
scripts/: deploy.sh  e2e_parallel_mini.py  e2e_qa_provider.py
sdk_adapter/: __init__.py  claude_adapter.py  codex_adapter.py  factory.py  protocols.py  types.py
server/: dependencies.py  gemini_client.py  main.py  schemas.py  validators.py  websocket.py
templates/: __init__.py  library.py
tests/: README.md  __init__.py  conftest.py  test_advanced_settings_validation.py  test_agent_guardrails.py  test_async_examples.py  test_auto_continue_reset_time.py  test_dependency_bulk_add.py  test_dependency_health.py  test_engine_settings.py  test_expand_chat_session.py  test_feature_attempts.py  test_feature_backlog.py  test_feature_dependencies.py  test_feature_edit.py  test_feature_no_progress.py  test_feature_staging.py  test_file_lock_guard.py  test_file_locks.py  test_gatekeeper_allow_no_tests.py  test_gatekeeper_ignores_claude_artifacts.py  test_gatekeeper_local.py  test_gatekeeper_setup.py  test_gatekeeper_verification_commands.py  test_integration.py  test_logs_prune.py  test_mcp_server_shim.py  test_multi_cli_reviewer.py  test_multi_model_claude_synth_thread.py  test_multi_model_generate.py  test_orchestrator_salvage.py  test_parallel_execution.py  test_patch_worker_implement_mode.py  test_pending_queue_state.py  test_port_allocator.py  test_project_config.py  test_repository_and_config.py  test_retry_backoff.py  test_reviewer_command.py  test_security.py  (+5 more)
ui/: Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+297 files in other folders)
